--- a/.github/workflows/run_test_cases.yaml
+++ b/.github/workflows/run_test_cases.yaml
@@ -29,7 +29,7 @@ jobs:
         - name: set config files
           run: |
             cd _build/emqx/lib
-            for var in $(ls); do
+            sudo bash -c 'for var in $(ls); do
               if [ $line == "emqx_auth_mysql" ];then
                 sed -i "/auth.mysql.server/c auth.mysql.server = mysql_server:3306" ./$var/etc/emqx_auth_mysql.conf 
                 echo "auth.mysql.username = root" >> ./$var/etc/emqx_auth_mysql.conf
@@ -47,7 +47,7 @@ jobs:
               if [ $line == "emqx_auth_ldap" ];then
                 sed -i "/auth.ldap.servers/c auth.ldap.servers = ldap_server" ./$var/etc/emqx_auth_ldap.conf 
               fi
-            done
+            done'
         - name: run all test cases
           run: docker exec emqx_auto_func_test_emqx_1 bash -c "cd /emqx-rel && EMQX_DEPS_DEFAULT_VSN=develop make ct"
         - uses: actions/upload-artifact@v1
